--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,17 +26,24 @@ jobs:
       - run: node --version
       - run: npm i -g @railway/cli
 
-      # ⬇️ NUEVOS PASOS NECESARIOS
+      # Verificar que el token esté presente (no se hace login en CI)
       - run:
-          name: Railway login (token)
+          name: Check Railway token present
           command: |
-            railway login --token "$RAILWAY_TOKEN" || railway login --apiKey "$RAILWAY_TOKEN"
+            if [ -z "$RAILWAY_TOKEN" ]; then
+              echo "RAILWAY_TOKEN is missing"; exit 1;
+            else
+              railway --version
+              echo "Token detected. Proceeding…"
+            fi
+
+      # Linkear proyecto y servicio correctos
       - run:
           name: Link to Railway project and service
           command: |
             railway link -p 77f7b558-f962-4e95-8f5a-636a2936a3aa -s 9d0d02d1-734e-460b-9ab9-a26849fb4301
 
-      # ⬇️ AJUSTE: usar tu servicio correcto
+      # Desplegar al servicio correcto
       - run:
           name: Deploy to Railway App
           command: |
