--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
       - run: node --version
       - run: npm i -g @railway/cli
 
-      # Verificar que el token esté presente (no se hace login en CI)
+      # Verificar que el token existe (no imprime el valor)
       - run:
           name: Check Railway token present
           command: |
@@ -37,18 +37,15 @@ jobs:
               echo "Token detected. Proceeding…"
             fi
 
-      # Linkear proyecto y servicio correctos
-      - run:
-          name: Link to Railway project and service
-          command: |
-            railway link -p 77f7b558-f962-4e95-8f5a-636a2936a3aa -s 9d0d02d1-734e-460b-9ab9-a26849fb4301
-
-      # Desplegar al servicio correcto
+      # Desplegar directamente indicando proyecto y servicio (sin 'link')
       - run:
           name: Deploy to Railway App
           command: |
             cd bankchurn-api
-            railway up --service "brilliant-enthusiasm" --detach
+            railway up \
+              --project "77f7b558-f962-4e95-8f5a-636a2936a3aa" \
+              --service "brilliant-enthusiasm" \
+              --detach
 
 tags_only: &tags_only
   filters:
