--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,26 +26,23 @@ jobs:
       - run: node --version
       - run: npm i -g @railway/cli
 
-      # Verificar que el token existe (no imprime el valor)
+      # Verifica que el token esté presente (la CLI lo usa automáticamente)
       - run:
           name: Check Railway token present
           command: |
             if [ -z "$RAILWAY_TOKEN" ]; then
               echo "RAILWAY_TOKEN is missing"; exit 1;
             else
+              echo "RAILWAY_TOKEN is set"
               railway --version
-              echo "Token detected. Proceeding…"
             fi
 
-      # Desplegar directamente indicando proyecto y servicio (sin 'link')
+      # Despliegue: indicar solo el servicio (con el token será suficiente)
       - run:
           name: Deploy to Railway App
           command: |
             cd bankchurn-api
-            railway up \
-              --project "77f7b558-f962-4e95-8f5a-636a2936a3aa" \
-              --service "brilliant-enthusiasm" \
-              --detach
+            railway up --service "brilliant-enthusiasm" --detach
 
 tags_only: &tags_only
   filters:
